Removed anonymous CardFilter classes